# SeqNado

./: .gitignore  .pre-commit-config.yaml  404.html  LICENCE  MANIFEST.in  README.md  check_config.ipynb  chipseq_pipeline.py  chipseq_pipeline.yml  config.yml  config_atac.yml  config_atac_example.yml  config_chip.yml  config_chip_example_TF.yml  config_chip_example_histone.yml  config_rna.yml  conftest.py  download_fastq_files_from_geo.py  environment.yml  environment_minimal.yml  index.html  install_seqnado.sh  mkdocs.yml  new_dependencies.txt  objects.inv  pyproject.toml  pytest.ini  rename_geo_downloads.py  salmon.txt  seqnado.def  seqnado_dev.yml  setup.cfg  setup.py  template.jinja  test.err  testing.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build_docs.yml  publish_package.yml  publish_pypi_release.yml  publish_pypi_test.yml  python-workflow.yml  test_multiassay.yml  test_multiomics.yml  test_pipelines.yml  test_unit.yml
2023-01-29_newchip_test/: readme_newchip_test.md
SUMMARY/: index.html
api/: index.html
api/config/: index.html
api/core/: index.html
api/inputs/: index.html
api/outputs/: index.html
assays/: index.html
chipseq_pipeline/: __init__.py  chipseq_pipeline.py
chipseq_pipeline/tests/: test_pipeline.py
cli/: index.html
cluster_config/: index.html
config/: config_atac.yml  config_chip.yml  config_rna.yml
configuration/: index.html
containers/: Dockerfile  build_containers.sh  environment_extra.yml  environment_pipeline.yml  environment_report.yml  environment_slim.yml  multiqc_config.yaml  seqnado_extra.def  seqnado_mcc.def  seqnado_ml_cpu.def  seqnado_pipeline.def  seqnado_report.def
containers/ml_cpu/: Dockerfile
containers/ml_gpu/: seqnado_ml_gpu.def
containers/old/: environment_report.yml  lanceotron-mcc.def  seqnado_pipeline.def  seqnado_report.def
containers/pipeline/: Dockerfile  environment_pipeline.yml  seqnado_pipeline.def
cookiecutter_config/config_atac/: cookiecutter.json
cookiecutter_config/config_rna/: cookiecutter.json
design/: index.html
docs/: SUMMARY.md  cli.md  cluster_config.md  configuration.md  design.md  faq.md  genomes.md  index.md  initialisation.md  installation.md  outputs.md  pipeline.md  quick_start.md  third_party_tools_config.py  web_interface.md
docs/api/: config.md  core.md  index.md  inputs.md  outputs.md
examples/: index.html
faq/: index.html
genomes/: index.html
initialisation/: index.html
installation/: index.html
ngs_pipeline/: __init__.py  cli.py  cli_config.py  filter_tsv.py  ngs_pipeline.py  pipeline_atac_chipseq.py  pipeline_rna.py  utils.py
ngs_pipeline/atacseq/: snakefile
ngs_pipeline/chipseq/: snakefile  utils.py
ngs_pipeline/misc/: download_fastq_files_from_geo.py
ngs_pipeline/rnaseq/: snakefile
ngs_pipeline/rules/: align.smk  alignment_post_processing.smk  filter_alignments.smk  hub.smk  peak_call.smk  pileup.smk  qc.smk  read_trimming.smk  remove_pcr_duplicates_deeptools.smk  remove_pcr_duplicates_ignore.smk  remove_pcr_duplicates_picard.smk
ngs_pipeline/tests/: test_atac.py  test_chip.py  test_chip_paired.py  test_pipeline.py  test_pipeline_atac_chip.py  test_rna.py  test_smk_chip.py
ngs_pipeline/workflow/: snakefile_atac  snakefile_chip  snakefile_rna
outputs/: index.html
pipeline/: index.html
quick_start/: index.html
search/: search_index.json
seqnado/: __init__.py  _config.py  _design.py  cli.py  config.py  core.py  design.py  helpers.py  init.sh  utils.py  utils_chipseq.py
seqnado/config/: __init__.py  configs.py  core.py  fastq_screen_generator.py  geo_submission.py  mixins.py  multiomics.py  third_party_tools.py  user_input.py  yaml_serializer.py
seqnado/data/: config_template.jinja  deseq2.qmd.jinja  genomes_template.json  geo_upload_instructions.txt  logo.txt  multiqc_config.yaml  preset_genomes.json  tool_options_meth.yml  tool_options_snp.yml
seqnado/design/: __init__.py  collections.py  core.py  experiment.py  fastq.py  inputs.py  outputs.py  validation.py
seqnado/inputs/: __init__.py  bam.py  bigwigs.py  collections.py  core.py  experiment.py  fastq.py  grouping.py  helpers.py  interfaces.py  validation.py
seqnado/outputs/: __init__.py  core.py  files.py  geo_submission.py  multiomics.py
seqnado/workflow/: Snakefile  Snakefile_multi  snakefile_atac  snakefile_build_index  snakefile_cat  snakefile_chip  snakefile_chip_rx  snakefile_consensus_peaks  snakefile_crispr  snakefile_mcc  snakefile_meth  snakefile_rna  snakefile_snp
seqnado_web/: app.py  cli.py  design_utils.py  init_utils.py  run_utils.py  utils.py
seqnado_web/static/: style.css
seqnado_web/templates/: design_editor.html  designs.html  genome_form.html  genomes.html  index.html  init.html  layout.html  run.html  run_result.html
tests/: __init__.py  conftest.py  test_atac.py  test_chip-rx.py  test_chip.py  test_config_submodule.py  test_design_core.py  test_design_experiment.py  test_design_fastq.py  test_design_inputs.py  test_design_validation.py  test_helpers.py  test_input_submodule.py  test_pipelines.py  test_rna.py  test_snp.py
tests/cli/: test_cli_config.py  test_cli_config_subprocess.py  test_cli_design.py  test_cli_integration.py  test_cli_smoke.py
tests/config/: test_alg_configs.py  test_genome.py  test_hub_and_plotting.py  test_indices.py
tests/data/: hg38_genes.bed  plotting_coordinates.bed
tests/inputs/: test_bam_collection.py  test_bigwig_collection.py  test_detection.py  test_protocol_and_metadata.py  test_public_api.py
tests/integration/: test_config_roundtrip.py
tests/old/: old_test_atac.py  old_test_chip_paired.py  old_test_chip_single.py  old_test_rna.py  old_test_smk_chip.py
tests/outputs/: test_outputs_factory.py  test_outputs_files.py  test_outputs_model.py
tests/pipeline/: conftest.py  test_multiomics.py  test_pipeline_multi.py  test_pipelines.py
tests/unit/: __init__.py  test_cli.py  test_cli_helpers.py  test_core.py  (+18 more)
third_party_tools_config/: index.html
tools/: index.html
tools-index/: index.html
workflow/: snakefile_atac  snakefile_chip
(+352 files in other folders)
