[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "seqnado"
authors = [
    {name = "Alastair Smith", email = "alastair.smith@ndcls.ox.ac.uk"},
    {name = "Catherine Chahrour", email = "catherine.chahrour@msdtc.ox.ac.uk"}
]
description = "Pipelines for genomics analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "click",
    "cookiecutter",
    "pandas",
    "pandera",
    "pexpect",
    "pulp<=3.3.0",
    "pydantic",
    "pyyaml",
    "rich",
    "seaborn",
    "snakemake-wrapper-utils",
    "snakemake>=9.12.0,<10",
    "tracknado",
    "typer",
    "wget",
]

[project.optional-dependencies]
slurm = ["snakemake-executor-plugin-slurm"]

[project.scripts]
seqnado = "seqnado.cli:app"

[project.urls]
Homepage = "https://github.com/alsmith151/seqnado"

[tool.setuptools_scm]
write_to = "seqnado/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multiple components)",
    "edge_case: Edge case tests",
    "slow: Slow tests (may take significant time)",
    "requires_data: Tests that require test data files",
    "parametrize: Parametrized tests",
    "pipeline: End-to-end Snakemake pipeline tests (opt-in)",
    "snakemake: Tests that invoke Snakemake via subprocess",
    "requires_apptainer: Tests that require Apptainer/Singularity",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["seqnado"]
omit = [
    "seqnado/_version.py",
    "seqnado/workflow/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
