[metadata]
name = ngs_pipeline
version = 0.2.0
author = asmith
author_email = alastair.smith@ndcls.ox.ac.uk
description = Pipelines for ATAC-seq, ChIP-seq and RNA-seq analysis
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
url = https://github.com/alsmith151/ngs_pipeline


[options]
zip_safe = False
include_package_data = False
packages = ngs_pipeline
install_requires=
    click
    seaborn
    wget
    pyyaml
    pybedtools
    pandas
    snakemake

[options.entry_points]
console_scripts = ngs-pipeline = ngs_pipeline.cli:cli

# [options.extras_require]
# lanceotron =  
#     lanceotron
#     tensorflow>=2.6
# macs = 
#     macs2
#     numpy<1.20