[metadata]
name = ngs_pipeline
version = 0.3.0
author = asmith
author_email = alastair.smith@ndcls.ox.ac.uk
description = Pipelines for ATAC-seq, ChIP-seq and RNA-seq analysis
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
url = https://github.com/alsmith151/ngs_pipeline


[options]
zip_safe = False
include_package_data = True
packages=find:
install_requires=
    click
    seaborn
    wget
    pyyaml
    pandas
    snakemake
    drmaa
    ucsc_hub_maker @ git+https://github.com/alsmith151/ucsc_hub_maker.git   

[options.entry_points]
console_scripts = ngs-pipeline = ngs_pipeline.cli:cli

[options.extras_require]
atac = 
    rsbamtk @ git+https://github.com/alsmith151/rsbamtk.git  

