[metadata]
name = seqnado
author = asmith, cchahrour
author_email = alastair.smith@ndcls.ox.ac.uk
description = Pipelines for ATAC-seq, ChIP-seq and RNA-seq analysis
readme = "README.md"
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
url = https://github.com/alsmith151/seqnado


[options]
zip_safe = False
include_package_data = True
packages=find:
install_requires=
    click
    cookiecutter
    seaborn
    wget
    pyyaml
    pandas
    snakemake<=7.30.2
    tracknado


[options.entry_points]
console_scripts =
    seqnado-config = seqnado.cli:cli_config
    seqnado-design = seqnado.cli:cli_design
    seqnado = seqnado.cli:cli_pipeline

[options.extras_require]
atac =
    # rsbamtk @ git+https://github.com/alsmith151/rsbamtk.git
